# advanced-seleniumlibrary-workshop-2025

./: .gitignore  README.md  pyproject.toml
00-Introduction/: README.md
10-BrowserDriverConfiguration/11-SpecifyTestBrowserVersion/: README.md  chrome-114.answer.robot  chrome-114.robot
10-BrowserDriverConfiguration/12-SeleniumManager/: README.md  download-driver.answer.sh
10-BrowserDriverConfiguration/13-ConfigureDriverUsingService/: README.md  extracredit-specify-browser-too.answer.robot  specify-driver-path.answer.robot
10-BrowserDriverConfiguration/14-DebuggingBrowserDriverWithLogs/: README.md  get-driver-log.answer.robot  get-driver-log.robot
10-BrowserDriverConfiguration/15-ConfigureBrowserWithOptions/: README.md  accept-insecure-certs.answer.robot  accept-insecure-certs.robot
20-DocumentationAsResource/21-NavigatingDocumentation/: README.md  list-of-doc-resources.answer.md
30-Javascript/31-ExecuteJavascript/: README.md  javascript-example.robot
30-Javascript/34-AsyncJavascript/: README.md
40-ExtendingTheLibrary/: README.md
40-ExtendingTheLibrary/41-GetLibraryInstance/: README.md
40-ExtendingTheLibrary/42-PlugInAPI/: README.md
40-ExtendingTheLibrary/43-EventFiringWebdriver/: README.md
50-ShadowDOM/52-NavigatingTheShadowDOM/: README.md
60-TimingIssues-WaitingStrategy/61-WaitUntilKeywords/: README.md
60-TimingIssues-WaitingStrategy/62-PageLoadStrategies/: README.md
70-WebDriverBiDi/: BiDi.robot  README.md  bidi.answer.robot  bidi.robot
80-Translations/: README.md
bottle/: bottle_server.py
demoapp/: README.md
(+11 files in other folders)
